# a-agent

./: .gitignore  CLAUDE.md  dev_log.md  main.py  pyproject.toml
alphy/: 02-09-26-alphy-productivity-and-uti.json  02-09-26-alphy-productivity-and-uti.md  02-15-26-alphy-ai-development-help-.json  02-15-26-alphy-ai-development-help-.md  02-15-26-alphy-productivity.json  02-15-26-alphy-productivity.md  02-16-26-alphy-ai-writing-tools.json  02-16-26-alphy-ai-writing-tools.md  02-16-26-alphy-screen-recording-app.json  02-16-26-alphy-screen-recording-app.md
docs/: BRAINTRUST_GUIDE.md  backlog.md  candidate_categories.md  refactor-plan.md
docs/mcp/: app-store-scraper.md  product-hunt.md  revenue-search-strategy.md
scorers/: effectiveness_scorer.md  gold_standard.json  timeliness_scorer.md  usefulness_scorer.md
scripts/: run_gold_standard.py  setup_mcps.sh  test_product_hunt_mcp.py  test_revenue_mcp.py
src/: cli.py  main.py
src/agents/: __init__.py  base.py  tools.py
src/agents/deep_research/: __init__.py  deep_researcher.py
src/agents/discovery/: __init__.py  discovery_researcher.py
src/agents/pattern_extraction/: __init__.py  pattern_extractor.py
src/agents/planner/: __init__.py  planner.py
src/config/: __init__.py  agent_config.py  settings.py
src/mcp/: __init__.py  client.py  config.py
src/session/: __init__.py
src/state/: schema.py  schemas.py  supervisor_state.py
src/tools/: __init__.py  app_store.py  product_hunt.py  web_search.py
src/ui/: __init__.py
src/workflow/: __init__.py  graph.py  helpers.py  logging.py  nodes.py  routing.py
(+11 files in other folders)
